<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edtNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_nome" />

        <EditText
            android:id="@+id/edtDescricao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_descricao" />

        <TextView
            android:id="@+id/tvHorario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/hint_horario" />

        <Button
            android:id="@+id/btnEscolherHorario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_escolher_horario" />

        <Button
            android:id="@+id/btnSalvar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/btn_salvar" />


    </LinearLayout>

</ScrollView>